--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a class="btn" href="#">Continue</a>
       </div>
     </section>
-    <div class="attribution">
+    <div class="attribution1">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">&nbsp;Frontend Mentor</a>. Coded by
       <a href="#">&nbsp;Mickey</a>.
     </div>
